<resources>
    <string name="app_name">Primer App</string>
    <string name="editUsuario">Usuario</string>
    <string name="editClave">Clave</string>
    <string name="btnAcceder">Acceder</string>
    <string name="btnAcercaDe">Acerca de</string>
    <string name="btnSalir">Salir</string>
    <string name="GitHub">GitHub, Programadora Informática</string>
    <string name="QueEsGitHub">GitHub es una plataforma colaborativa que utiliza Git para alojar proyectos de desarrollo. Permite a los desarrolladores trabajar juntos, gestionar el código fuente, realizar un seguimiento de cambios, colaborar en la escritura de código, revisar el trabajo de otros y administrar problemas y solicitudes de extracción. Es popular tanto para proyectos de código abierto como privados.</string>
    <string name="textValentina">Valentina Nieto</string>
    <string name="btnContacto">Contacto</string>
    <string name="btnCorreo">Correo</string>
    <string name="btnRegresar">Regresar</string>
    <string name="textDesarrollador">Desarrolladora del Software</string>
</resources>