<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDe">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/githubfondo2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        tools:layout_editor_absoluteX="-64dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="275dp"
        android:layout_height="37dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="100dp"
        android:text="@string/textValentina"
        android:gravity="center_horizontal|bottom"
        android:textColor="@color/verde"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnContacto"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#00000000"
        android:text="@string/btnContacto"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="134dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#006110D3"
        android:text="@string/btnCorreo"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="289dp"
        android:layout_height="85dp"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="28dp"
        android:background="#00000000"
        android:gravity="center_horizontal|bottom"
        android:text="@string/textDesarrollador"
        android:textColor="@color/violeta"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/btnContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="168dp"
        android:layout_height="55dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="312dp"
        android:backgroundTint="#006110D3"
        android:text="@string/btnRegresar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="267dp"
        android:layout_height="421dp"
        android:layout_marginBottom="212dp"
        android:cropToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/backgroundImageView"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/fotodesarrollador" />

</androidx.constraintlayout.widget.ConstraintLayout>
