<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tint="#80000000"
    tools:context=".Menu">

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/githubfondo2" />

    <!-- Vista semitransparente para oscurecer la imagen de fondo -->
    <!-- Color semitransparente (hexadecimal ARGB) -->


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="165dp"
        android:layout_height="82dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#006CC644"
        android:padding="20dp"
        android:text="@string/btnAcercaDe"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="175dp"
        android:text="@string/GitHub"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="396dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:gravity="center_horizontal|bottom"
        android:text="@string/QueEsGitHub"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.237"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#006CC644"
        android:text="@string/btnSalir"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="wrap" />
</androidx.constraintlayout.widget.ConstraintLayout>
